# ca-analysis-bloodflow

./: .gitignore  Dockerfile  README.md  Untitled.ipynb  a.netcdf  analog_trace.py  analysis_gui.py  analyze_ca_stacks_with_vessels.py  caiman_funcs_for_comparison.py  calcium_over_time.py  calcium_trace_analysis.py  conf.py  dff_tools.py  draw_manual_rois.py  filter_cells.py  fluo_metadata.py  index.rst  predictions.p  predictions_c.p  pyproject.toml  pyrightconfig.json  requirements.txt  roipoly.py  settings.json  setup.cfg  setup.py  single_fov_analysis.py  test_data_fov3.p  test_data_fov3_c.p  trace_converter.py  vasc_occ_analysis.py  vessel_diameter_avg_to_sheet.py
.ipynb_checkpoints/: analyze_ca_stacks_with_vessels-checkpoint.py
.tours/: general-introduction.tour  running-a-simple-post-processing-pipeline.tour
CHIPS/: create_calibrations.m  create_metadata.m  create_rawimg_mag10.m  create_rawimg_mag3.m  create_rawimg_mag5.m  create_rawimg_mag7.m
ca_analysis/: analog_trace.py  calcium_over_time.py  calcium_trace_analysis.py  dff_tools.py  find_colabeled_cells.py  fluo_metadata.py  grid2d.py  guis_for_analysis.py  single_fov_analysis.py  vasc_occ_analysis.py  vasc_occ_parsing.py
calcium_bflow_analysis/: __init__.py  a.txt  analog_trace.py  analyze_ca_stacks_with_vessels.py  analyze_spike_delay_to_stim.py  caiman_funcs_for_comparison.py  calcium_over_time.py  calcium_trace_analysis.py  dff_dataset.py  dff_heatmap.py  dff_tools.py  draw_manual_rois.py  fluo_metadata.py  (+8 more)
calcium_bflow_analysis.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
(+187 files in other folders)
