[tool.poetry]
name = "calcium_bflow_analysis"
version = "0.1.0"
description = "Library for analysis of calcium and bloodflow data"
authors = ["Hagai Har-Gil"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.6.1"
imageio = "^2.8.0"
scikit-image = "^0.16.2"
matplotlib = "^3.2.1"
numba = "^0.48.0"
scipy = "^1.4.1"
ipython = "^7.13.0"
tifffile = "^2020.2.16"
numpy = "^1.18.2"
pandas = "^1.0.3"
attrs = "^19.3.0"
xarray = "^0.15.1"
h5py = "^2.10.0"
roipoly = "^0.5.2"
colorama = "^0.4.3"

[tool.poetry.dev-dependencies]
pylint = "^2.4.4"
pytest = "^5.4.1"
black = "^19.10b0"
mypy = "^0.770"
flake8 = "^3.7.9"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
